--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <div class="navbar">
-      <a href="index.html"><img src="home.gif" alt="Home" class="home" align="left"><span>Home</span></a>
-      <a href="category.html"><img src="category.gif" alt="category" class="category" align="center"><span>Category</span></a>
-      <a href="currency.html"><img src="currency.gif" alt="currency" class="currency" align="right"><span>Currency</span></a>
-    </div>
+    <div class="navbar"> 
+      <nav>
+          <ul class="page">
+              <li><a href="index.html" class="active"><img src="home.gif" alt="Home" id="home"></a></li>
+              <li><a href="./category.html" class="active"><img src="category.gif" alt="Home" id="category"></a></li>
+              <li><a href="./currency.html" class="active"><img src="currency.gif" alt="Home" id="currency"></a></li>
+          </ul>
+      </nav>
+      </div>
   </div>
 </body>
 </html>
